Refactored : Modified project for heroku deployment
Project was successfully deployed to heroku

--- a/pom.xml
+++ b/pom.xml
@@ -65,11 +65,18 @@
         <artifactId>heroku-maven-plugin</artifactId>
         <version>3.0.3</version>
         <configuration>
-		  <processTypes>
-		     <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
-		  </processTypes>
+        	<appName>simple-crud-soham</appName>
 		</configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.2</version>	
       </plugin>
     </plugins>
   </build>
+  <properties>
+     <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
 </project>
