--- a/pom.xml
+++ b/pom.xml
@@ -32,18 +32,6 @@
             <artifactId>servlet-api</artifactId>
             <version>3.0-alpha-1</version>
         </dependency>
-        <!-- spring & mongodb -->
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-mongodb</artifactId>
-            <version>2.0.6.RELEASE</version>
-        </dependency>
-        <!-- mongodb -->
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>3.5.0</version>
-        </dependency>
         <!-- okhttp3 -->
         <dependency>
 		    <groupId>com.squareup.okhttp3</groupId>
@@ -65,14 +53,16 @@
         <artifactId>heroku-maven-plugin</artifactId>
         <version>3.0.3</version>
         <configuration>
-        	<appName>simple-crud-soham</appName>
-		</configuration>
+        	<appName>soham-mvc-crud</appName>
+        	</configuration>
+		
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.3.2</version>	
       </plugin>
+      
     </plugins>
   </build>
   <properties>
